data/derived/comb/progs/unify/prog1107.ml.out
Characters 45-54:
  let fixpoint (f,b) = wwhile(let k x = f x in (b, b!=b), b);;
                                               ^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
